# mlt-project

./: .gitignore  .pdm-python  Dockerfile  README.md  cleaned_loan_data.csv  data_analysis.py  docker-compose.yml  eda_analysis.py  main.py  pyproject.toml  requirements.txt
backend/: main.py
backend/models/: scaler.pkl
data/: cleaned_loan_prediction.csv
frontend/: index.html  request-send.js  style.css
model/: loan_approval_model.pkl
notebook/: eda.ipynb  training.ipynb
static/: eda.html  index.html  metrics.html  request-send.js  style.css
static/data/: eda_results.json  model_metrics.json
