[project]
name = "mlt-project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "hussam khoury", email = "hussamalkoury501@gmail.com"},
]
dependencies = ["fastapi>=0.115.12", "uvicorn>=0.34.3", "pydantic>=2.11.5", "scikit-learn>=1.7.0", "xgboost>=3.0.2", "joblib>=1.5.1", "shap>=0.47.2", "pandas>=2.3.0", "numpy>=2.2.6", "matplotlib>=3.10.3", "seaborn>=0.13.2", "jinja2>=3.1.6", "notebook>=7.4.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
